<resources>
    <string name="app_name">OlxApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">الصفحة الرئيسية</string>
    <string name="menu_gallery">الرسائل</string>
    <string name="menu_addAdv">أضف اعلان</string>
    <string name="menu_tools">تطبيقنا</string>
    <string name="menu_share">نشر</string>
    <string name="menu_send">أرسل</string>
    <string name="menu_logout">تسجيل خروج</string>




    <string name="requests">Requests</string>
    <string name="sign_out">Sign Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="repPass">Repeat Password</string>
    <string name="go_to_sign_in">Already Registered? Sign In Here</string>
    <string name="go_to_sign_up">Not a member? Sign up here</string>
    <string name="reset_passord">Reset Password</string>
    <string name="login">Login</string>
    <string name="select_type">Select type</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="useAnotherAcount">To you use another acount click here</string>
    <string name="verification">Verification</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>

    <string-array name="sports_images">
        <item>https://androidwave.com/media/images/img_baseball.jpg</item>
        <item>https://androidwave.com/media/images/img_badminton.jpg</item>
        <item>https://androidwave.com/media/images/img_basketball.jpg</item>
        <item>https://androidwave.com/media/images/img_bowling.jpg</item>
        <item>https://androidwave.com/media/images/img_cycling.jpg</item>
        <item>https://androidwave.com/media/images/img_golf.jpg</item>
        <item>https://androidwave.com/media/images/img_running.jpg</item>
        <item>https://androidwave.com/media/images/img_soccer.jpg</item>
        <item>https://androidwave.com/media/images/img_swimming.jpg</item>
        <item>https://androidwave.com/media/images/img_tabletennis.jpg</item>
        <item>https://androidwave.com/media/images/img_tennis.jpg</item>
    </string-array>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="sports_info">
        <item>Nike Enters 10-Year Partnership With Major League Baseball! </item>
        <item>Indonesia Masters – Saina Nehwal sails into semifinals PV Sindhu, Kidambi Srikanth lose in quarters!</item>
        <item>College Basketball 2018–19 Player of the Year Power Rankings Everyone is chasing Dukes Zion Williamson!</item>
        <item>Local bowler lands 132 perfect games, shares his secret for success!</item>
        <item>Sierra solos to win at womens Cadel Evans Great Ocean Road Race!</item>
        <item>Tiger Woods Friday live blog: Woods overcomes mid-round hiccup to make the cut at Torrey Pines!</item>
        <item>The 5km fun run was organised by Ironman England as part of its annual three-day triathlon festival in Bolton, Manchester in a bid to attract more female runners to the event!</item>
        <item>Soccer insider notes: Liverpool not the only Premier League club eyeing Weston McKennie!</item>
        <item>Chloe Grimme, a USA Swimming Scholastic All American from Land O Lakes, Florida, announced on social media that she has verbally committed to the University of Florida for 2020–21!</item>
        <item>Table Tennis Federation Revokes Soumyajit Ghoshs Suspension, 9 Months After Rape Allegations!</item>
        <item>2019 Australian Open odds, predictions for mens finals!</item>
    </string-array>



</resources>
