<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.olxapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.olxapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_addAdv"
        android:name="com.example.olxapp.ui.addAdv.AddAdvFragment"
        android:label="@string/menu_addAdv"
        tools:layout="@layout/fragment_addadv" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.olxapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.olxapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.olxapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
<!--    <include-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:label="@string/log_out"-->
<!--        tools:layout="@layout/log_out" />-->
    <activity
        android:id="@+id/nav_logout"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_login" />


</navigation>