<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorIcons"
    android:layout_margin="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="3dp"

        android:padding="5dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/title_placeholder"
                android:textColor="@color/colorIcons" />

            <TextView
                android:id="@+id/newsTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/news_placeholder" />

            <TextView
                android:id="@+id/newsInfo"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsTitle"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/sports_info_placeholder"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>